implemented update product backend apis
