# frontend/openapi.yaml
@@ -14,6 +14,8 @@ security:
 tags:
 - name: UserResource
   description: Apis for the logged in user
+- name: AdminModProductManagementResource
+  description: Apis to manage products / Only for Admin and Mod
 - name: AdminModUserManagementResource
   description: Apis to manage user / Only for Admin and Mod
 - name: AdminModCategoryManagementResource
@@ -117,6 +119,88 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDetailDTO'
+  /api/portal/product/:
+    get:
+      tags:
+      - AdminModProductManagementResource
+      description: load all products with pagination and filter
+      operationId: loadAllProducts
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: pageSize
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: searchTerm
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: isActive
+        in: query
+        required: false
+        schema:
+          type: boolean
+      - name: isChecked
+        in: query
+        required: false
+        schema:
+          type: boolean
+      - name: categoryId
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseWrapperProductOverviewDTO'
+    put:
+      tags:
+      - AdminModProductManagementResource
+      description: update category
+      operationId: updateProduct
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateProductDTO'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDetailDTO'
+    post:
+      tags:
+      - AdminModProductManagementResource
+      description: create new product
+      operationId: createProduct
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateProductDTO'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDetailDTO'
   /api/portal/category/:
     get:
       tags:
@@ -216,6 +300,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDetailDTO'
+  /api/portal/product/{id}:
+    get:
+      tags:
+      - AdminModProductManagementResource
+      description: load product by id
+      operationId: loadProductById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDetailDTO'
   /api/portal/category/{id}:
     get:
       tags:
@@ -345,7 +448,30 @@ components:
             - ADMIN
             - MOD
             - USER
-    UpdateCategoryDTO:
+    UpdateProductDTO:
+      type: object
+      properties:
+        id:
+          type: string
+        version:
+          type: integer
+          format: int32
+        name:
+          type: string
+        producer:
+          type: string
+        quantity:
+          type: string
+        price:
+          type: number
+          format: double
+        isActive:
+          type: boolean
+        isChecked:
+          type: boolean
+        categoryId:
+          type: string
+    CategoryDetailDTO:
       type: object
       properties:
         id:
@@ -357,7 +483,30 @@ components:
           type: string
         description:
           type: string
-    CategoryDetailDTO:
+    ProductDetailDTO:
+      type: object
+      properties:
+        id:
+          type: string
+        version:
+          type: integer
+          format: int32
+        name:
+          type: string
+        producer:
+          type: string
+        quantity:
+          type: string
+        price:
+          type: number
+          format: double
+        isActive:
+          type: boolean
+        isChecked:
+          type: boolean
+        category:
+          $ref: '#/components/schemas/CategoryDetailDTO'
+    UpdateCategoryDTO:
       type: object
       properties:
         id:
@@ -405,6 +554,24 @@ components:
             - ADMIN
             - MOD
             - USER
+    CreateProductDTO:
+      type: object
+      properties:
+        name:
+          type: string
+        producer:
+          type: string
+        quantity:
+          type: string
+        price:
+          type: number
+          format: double
+        isActive:
+          type: boolean
+        isChecked:
+          type: boolean
+        categoryId:
+          type: string
     CreateCategoryDTO:
       type: object
       properties:
@@ -448,6 +615,32 @@ components:
           type: string
         email:
           type: string
+    ProductOverviewDTO:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        price:
+          type: number
+          format: double
+        isActive:
+          type: boolean
+        isChecked:
+          type: boolean
+        categoryName:
+          type: string
+    ResponseWrapperProductOverviewDTO:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProductOverviewDTO'
+        totalElements:
+          type: integer
+          format: int64
     CategoryOverviewDTO:
       type: object
       properties:
